Practica3/analizador/y.output
Terminales no usados en la gramática

    TOK_ERROR


Gramática

    0 $accept: programa $end

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones funciones sentencias TOK_LLAVEDERECHA

    2 declaraciones: declaracion
    3              | declaracion declaraciones

    4 declaracion: clase identificadores TOK_PUNTOYCOMA

    5 clase: clase_escalar
    6      | clase_vector

    7 clase_escalar: tipo

    8 tipo: TOK_INT
    9     | TOK_BOOLEAN

   10 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO constante_entera TOK_CORCHETEDERECHO

   11 identificadores: identificador
   12                | identificador TOK_COMA identificadores

   13 funciones: funcion funciones
   14          | %empty

   15 funcion: TOK_FUNCTION tipo identificador TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion sentencias TOK_LLAVEDERECHA

   16 parametros_funcion: parametro_funcion resto_parametros_funcion
   17                   | %empty

   18 resto_parametros_funcion: TOK_PUNTOYCOMA parametro_funcion resto_parametros_funcion
   19                         | %empty

   20 parametro_funcion: tipo identificador

   21 declaraciones_funcion: declaraciones
   22                      | %empty

   23 sentencias: sentencia
   24           | sentencia sentencias

   25 sentencia: sentencia_simple TOK_PUNTOYCOMA
   26          | bloque

   27 sentencia_simple: asignacion
   28                 | lectura
   29                 | escritura
   30                 | retorno_funcion

   31 bloque: condicional
   32       | bucle

   33 asignacion: identificador TOK_ASIGNACION exp
   34           | elemento_vector TOK_ASIGNACION exp

   35 elemento_vector: identificador TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

   36 condicional: TOK_IF TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA
   37            | TOK_IF TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

   38 bucle: TOK_WHILE TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

   39 lectura: TOK_SCANF identificador

   40 escritura: TOK_PRINTF exp

   41 retorno_funcion: TOK_RETURN exp

   42 exp: exp TOK_MAS exp
   43    | exp TOK_MENOS exp
   44    | exp TOK_DIVISION exp
   45    | exp TOK_ASTERISCO exp
   46    | TOK_MENOS exp
   47    | exp TOK_AND exp
   48    | exp TOK_OR exp
   49    | TOK_NOT exp
   50    | identificador
   51    | constante
   52    | TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO
   53    | TOK_PARENTESISIZQUIERDO comparacion TOK_PARENTESISDERECHO
   54    | elemento_vector
   55    | identificador TOK_PARENTESISIZQUIERDO lista_expresiones TOK_PARENTESISDERECHO

   56 lista_expresiones: exp resto_lista_expresiones
   57                  | %empty

   58 resto_lista_expresiones: TOK_COMA exp resto_lista_expresiones
   59                        | %empty

   60 comparacion: exp TOK_IGUAL exp
   61            | exp TOK_DISTINTO exp
   62            | exp TOK_MENORIGUAL exp
   63            | exp TOK_MAYORIGUAL exp
   64            | exp TOK_MENOR exp
   65            | exp TOK_MAYOR exp

   66 constante: constante_logica
   67          | constante_entera

   68 constante_logica: TOK_TRUE
   69                 | TOK_FALSE

   70 constante_entera: TOK_CONSTANTE_ENTERA

   71 identificador: TOK_IDENTIFICADOR


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    TOK_MAIN (258) 1
    TOK_INT (259) 8
    TOK_BOOLEAN (260) 9
    TOK_ARRAY (261) 10
    TOK_FUNCTION (262) 15
    TOK_IF (263) 36 37
    TOK_ELSE (264) 37
    TOK_WHILE (265) 38
    TOK_SCANF (266) 39
    TOK_PRINTF (267) 40
    TOK_RETURN (268) 41
    TOK_PUNTOYCOMA (269) 4 18 25
    TOK_COMA (270) 12 58
    TOK_PARENTESISIZQUIERDO (271) 15 36 37 38 52 53 55
    TOK_PARENTESISDERECHO (272) 15 36 37 38 52 53 55
    TOK_CORCHETEIZQUIERDO (273) 10 35
    TOK_CORCHETEDERECHO (274) 10 35
    TOK_LLAVEIZQUIERDA (275) 1 15 36 37 38
    TOK_LLAVEDERECHA (276) 1 15 36 37 38
    TOK_ASIGNACION (277) 33 34
    TOK_MAS (278) 42
    TOK_MENOS (279) 43 46
    TOK_DIVISION (280) 44
    TOK_ASTERISCO (281) 45
    TOK_AND (282) 47
    TOK_OR (283) 48
    TOK_NOT (284) 49
    TOK_IGUAL (285) 60
    TOK_DISTINTO (286) 61
    TOK_MENORIGUAL (287) 62
    TOK_MAYORIGUAL (288) 63
    TOK_MENOR (289) 64
    TOK_MAYOR (290) 65
    TOK_IDENTIFICADOR (291) 71
    TOK_CONSTANTE_ENTERA (292) 70
    TOK_TRUE (293) 68
    TOK_FALSE (294) 69
    TOK_ERROR (295)


No terminales con las reglas donde aparecen

    $accept (41)
        on left: 0
    programa (42)
        on left: 1
        on right: 0
    declaraciones (43)
        on left: 2 3
        on right: 1 3 21
    declaracion (44)
        on left: 4
        on right: 2 3
    clase (45)
        on left: 5 6
        on right: 4
    clase_escalar (46)
        on left: 7
        on right: 5
    tipo (47)
        on left: 8 9
        on right: 7 10 15 20
    clase_vector (48)
        on left: 10
        on right: 6
    identificadores (49)
        on left: 11 12
        on right: 4 12
    funciones (50)
        on left: 13 14
        on right: 1 13
    funcion (51)
        on left: 15
        on right: 13
    parametros_funcion (52)
        on left: 16 17
        on right: 15
    resto_parametros_funcion (53)
        on left: 18 19
        on right: 16 18
    parametro_funcion (54)
        on left: 20
        on right: 16 18
    declaraciones_funcion (55)
        on left: 21 22
        on right: 15
    sentencias (56)
        on left: 23 24
        on right: 1 15 24 36 37 38
    sentencia (57)
        on left: 25 26
        on right: 23 24
    sentencia_simple (58)
        on left: 27 28 29 30
        on right: 25
    bloque (59)
        on left: 31 32
        on right: 26
    asignacion (60)
        on left: 33 34
        on right: 27
    elemento_vector (61)
        on left: 35
        on right: 34 54
    condicional (62)
        on left: 36 37
        on right: 31
    bucle (63)
        on left: 38
        on right: 32
    lectura (64)
        on left: 39
        on right: 28
    escritura (65)
        on left: 40
        on right: 29
    retorno_funcion (66)
        on left: 41
        on right: 30
    exp (67)
        on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55
        on right: 33 34 35 36 37 38 40 41 42 43 44 45 46 47 48 49 52 56 58 60 61 62 63 64 65
    lista_expresiones (68)
        on left: 56 57
        on right: 55
    resto_lista_expresiones (69)
        on left: 58 59
        on right: 56 58
    comparacion (70)
        on left: 60 61 62 63 64 65
        on right: 53
    constante (71)
        on left: 66 67
        on right: 51
    constante_logica (72)
        on left: 68 69
        on right: 66
    constante_entera (73)
        on left: 70
        on right: 10 67
    identificador (74)
        on left: 71
        on right: 11 12 15 20 33 35 39 50 55


Estado 0

    0 $accept: . programa $end

    TOK_MAIN  desplazar e ir al estado 1

    programa  ir al estado 2


Estado 1

    1 programa: TOK_MAIN . TOK_LLAVEIZQUIERDA declaraciones funciones sentencias TOK_LLAVEDERECHA

    TOK_LLAVEIZQUIERDA  desplazar e ir al estado 3


Estado 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 4


Estado 3

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA . declaraciones funciones sentencias TOK_LLAVEDERECHA

    TOK_INT      desplazar e ir al estado 5
    TOK_BOOLEAN  desplazar e ir al estado 6
    TOK_ARRAY    desplazar e ir al estado 7

    declaraciones  ir al estado 8
    declaracion    ir al estado 9
    clase          ir al estado 10
    clase_escalar  ir al estado 11
    tipo           ir al estado 12
    clase_vector   ir al estado 13


Estado 4

    0 $accept: programa $end .

    $default  aceptar


Estado 5

    8 tipo: TOK_INT .

    $default  reduce usando la regla 8 (tipo)


Estado 6

    9 tipo: TOK_BOOLEAN .

    $default  reduce usando la regla 9 (tipo)


Estado 7

   10 clase_vector: TOK_ARRAY . tipo TOK_CORCHETEIZQUIERDO constante_entera TOK_CORCHETEDERECHO

    TOK_INT      desplazar e ir al estado 5
    TOK_BOOLEAN  desplazar e ir al estado 6

    tipo  ir al estado 14


Estado 8

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones . funciones sentencias TOK_LLAVEDERECHA

    TOK_FUNCTION  desplazar e ir al estado 15

    $default  reduce usando la regla 14 (funciones)

    funciones  ir al estado 16
    funcion    ir al estado 17


Estado 9

    2 declaraciones: declaracion .
    3              | declaracion . declaraciones

    TOK_INT      desplazar e ir al estado 5
    TOK_BOOLEAN  desplazar e ir al estado 6
    TOK_ARRAY    desplazar e ir al estado 7

    $default  reduce usando la regla 2 (declaraciones)

    declaraciones  ir al estado 18
    declaracion    ir al estado 9
    clase          ir al estado 10
    clase_escalar  ir al estado 11
    tipo           ir al estado 12
    clase_vector   ir al estado 13


Estado 10

    4 declaracion: clase . identificadores TOK_PUNTOYCOMA

    TOK_IDENTIFICADOR  desplazar e ir al estado 19

    identificadores  ir al estado 20
    identificador    ir al estado 21


Estado 11

    5 clase: clase_escalar .

    $default  reduce usando la regla 5 (clase)


Estado 12

    7 clase_escalar: tipo .

    $default  reduce usando la regla 7 (clase_escalar)


Estado 13

    6 clase: clase_vector .

    $default  reduce usando la regla 6 (clase)


Estado 14

   10 clase_vector: TOK_ARRAY tipo . TOK_CORCHETEIZQUIERDO constante_entera TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  desplazar e ir al estado 22


Estado 15

   15 funcion: TOK_FUNCTION . tipo identificador TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion sentencias TOK_LLAVEDERECHA

    TOK_INT      desplazar e ir al estado 5
    TOK_BOOLEAN  desplazar e ir al estado 6

    tipo  ir al estado 23


Estado 16

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones funciones . sentencias TOK_LLAVEDERECHA

    TOK_IF             desplazar e ir al estado 24
    TOK_WHILE          desplazar e ir al estado 25
    TOK_SCANF          desplazar e ir al estado 26
    TOK_PRINTF         desplazar e ir al estado 27
    TOK_RETURN         desplazar e ir al estado 28
    TOK_IDENTIFICADOR  desplazar e ir al estado 19

    sentencias        ir al estado 29
    sentencia         ir al estado 30
    sentencia_simple  ir al estado 31
    bloque            ir al estado 32
    asignacion        ir al estado 33
    elemento_vector   ir al estado 34
    condicional       ir al estado 35
    bucle             ir al estado 36
    lectura           ir al estado 37
    escritura         ir al estado 38
    retorno_funcion   ir al estado 39
    identificador     ir al estado 40


Estado 17

   13 funciones: funcion . funciones

    TOK_FUNCTION  desplazar e ir al estado 15

    $default  reduce usando la regla 14 (funciones)

    funciones  ir al estado 41
    funcion    ir al estado 17


Estado 18

    3 declaraciones: declaracion declaraciones .

    $default  reduce usando la regla 3 (declaraciones)


Estado 19

   71 identificador: TOK_IDENTIFICADOR .

    $default  reduce usando la regla 71 (identificador)


Estado 20

    4 declaracion: clase identificadores . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  desplazar e ir al estado 42


Estado 21

   11 identificadores: identificador .
   12                | identificador . TOK_COMA identificadores

    TOK_COMA  desplazar e ir al estado 43

    $default  reduce usando la regla 11 (identificadores)


Estado 22

   10 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO . constante_entera TOK_CORCHETEDERECHO

    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 44

    constante_entera  ir al estado 45


Estado 23

   15 funcion: TOK_FUNCTION tipo . identificador TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion sentencias TOK_LLAVEDERECHA

    TOK_IDENTIFICADOR  desplazar e ir al estado 19

    identificador  ir al estado 46


Estado 24

   36 condicional: TOK_IF . TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA
   37            | TOK_IF . TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 47


Estado 25

   38 bucle: TOK_WHILE . TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 48


Estado 26

   39 lectura: TOK_SCANF . identificador

    TOK_IDENTIFICADOR  desplazar e ir al estado 19

    identificador  ir al estado 49


Estado 27

   40 escritura: TOK_PRINTF . exp

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 50
    TOK_MENOS                desplazar e ir al estado 51
    TOK_NOT                  desplazar e ir al estado 52
    TOK_IDENTIFICADOR        desplazar e ir al estado 19
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 44
    TOK_TRUE                 desplazar e ir al estado 53
    TOK_FALSE                desplazar e ir al estado 54

    elemento_vector   ir al estado 55
    exp               ir al estado 56
    constante         ir al estado 57
    constante_logica  ir al estado 58
    constante_entera  ir al estado 59
    identificador     ir al estado 60


Estado 28

   41 retorno_funcion: TOK_RETURN . exp

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 50
    TOK_MENOS                desplazar e ir al estado 51
    TOK_NOT                  desplazar e ir al estado 52
    TOK_IDENTIFICADOR        desplazar e ir al estado 19
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 44
    TOK_TRUE                 desplazar e ir al estado 53
    TOK_FALSE                desplazar e ir al estado 54

    elemento_vector   ir al estado 55
    exp               ir al estado 61
    constante         ir al estado 57
    constante_logica  ir al estado 58
    constante_entera  ir al estado 59
    identificador     ir al estado 60


Estado 29

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones funciones sentencias . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  desplazar e ir al estado 62


Estado 30

   23 sentencias: sentencia .
   24           | sentencia . sentencias

    TOK_IF             desplazar e ir al estado 24
    TOK_WHILE          desplazar e ir al estado 25
    TOK_SCANF          desplazar e ir al estado 26
    TOK_PRINTF         desplazar e ir al estado 27
    TOK_RETURN         desplazar e ir al estado 28
    TOK_IDENTIFICADOR  desplazar e ir al estado 19

    $default  reduce usando la regla 23 (sentencias)

    sentencias        ir al estado 63
    sentencia         ir al estado 30
    sentencia_simple  ir al estado 31
    bloque            ir al estado 32
    asignacion        ir al estado 33
    elemento_vector   ir al estado 34
    condicional       ir al estado 35
    bucle             ir al estado 36
    lectura           ir al estado 37
    escritura         ir al estado 38
    retorno_funcion   ir al estado 39
    identificador     ir al estado 40


Estado 31

   25 sentencia: sentencia_simple . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  desplazar e ir al estado 64


Estado 32

   26 sentencia: bloque .

    $default  reduce usando la regla 26 (sentencia)


Estado 33

   27 sentencia_simple: asignacion .

    $default  reduce usando la regla 27 (sentencia_simple)


Estado 34

   34 asignacion: elemento_vector . TOK_ASIGNACION exp

    TOK_ASIGNACION  desplazar e ir al estado 65


Estado 35

   31 bloque: condicional .

    $default  reduce usando la regla 31 (bloque)


Estado 36

   32 bloque: bucle .

    $default  reduce usando la regla 32 (bloque)


Estado 37

   28 sentencia_simple: lectura .

    $default  reduce usando la regla 28 (sentencia_simple)


Estado 38

   29 sentencia_simple: escritura .

    $default  reduce usando la regla 29 (sentencia_simple)


Estado 39

   30 sentencia_simple: retorno_funcion .

    $default  reduce usando la regla 30 (sentencia_simple)


Estado 40

   33 asignacion: identificador . TOK_ASIGNACION exp
   35 elemento_vector: identificador . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  desplazar e ir al estado 66
    TOK_ASIGNACION         desplazar e ir al estado 67


Estado 41

   13 funciones: funcion funciones .

    $default  reduce usando la regla 13 (funciones)


Estado 42

    4 declaracion: clase identificadores TOK_PUNTOYCOMA .

    $default  reduce usando la regla 4 (declaracion)


Estado 43

   12 identificadores: identificador TOK_COMA . identificadores

    TOK_IDENTIFICADOR  desplazar e ir al estado 19

    identificadores  ir al estado 68
    identificador    ir al estado 21


Estado 44

   70 constante_entera: TOK_CONSTANTE_ENTERA .

    $default  reduce usando la regla 70 (constante_entera)


Estado 45

   10 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO constante_entera . TOK_CORCHETEDERECHO

    TOK_CORCHETEDERECHO  desplazar e ir al estado 69


Estado 46

   15 funcion: TOK_FUNCTION tipo identificador . TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion sentencias TOK_LLAVEDERECHA

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 70


Estado 47

   36 condicional: TOK_IF TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA
   37            | TOK_IF TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 50
    TOK_MENOS                desplazar e ir al estado 51
    TOK_NOT                  desplazar e ir al estado 52
    TOK_IDENTIFICADOR        desplazar e ir al estado 19
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 44
    TOK_TRUE                 desplazar e ir al estado 53
    TOK_FALSE                desplazar e ir al estado 54

    elemento_vector   ir al estado 55
    exp               ir al estado 71
    constante         ir al estado 57
    constante_logica  ir al estado 58
    constante_entera  ir al estado 59
    identificador     ir al estado 60


Estado 48

   38 bucle: TOK_WHILE TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 50
    TOK_MENOS                desplazar e ir al estado 51
    TOK_NOT                  desplazar e ir al estado 52
    TOK_IDENTIFICADOR        desplazar e ir al estado 19
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 44
    TOK_TRUE                 desplazar e ir al estado 53
    TOK_FALSE                desplazar e ir al estado 54

    elemento_vector   ir al estado 55
    exp               ir al estado 72
    constante         ir al estado 57
    constante_logica  ir al estado 58
    constante_entera  ir al estado 59
    identificador     ir al estado 60


Estado 49

   39 lectura: TOK_SCANF identificador .

    $default  reduce usando la regla 39 (lectura)


Estado 50

   52 exp: TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO
   53    | TOK_PARENTESISIZQUIERDO . comparacion TOK_PARENTESISDERECHO

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 50
    TOK_MENOS                desplazar e ir al estado 51
    TOK_NOT                  desplazar e ir al estado 52
    TOK_IDENTIFICADOR        desplazar e ir al estado 19
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 44
    TOK_TRUE                 desplazar e ir al estado 53
    TOK_FALSE                desplazar e ir al estado 54

    elemento_vector   ir al estado 55
    exp               ir al estado 73
    comparacion       ir al estado 74
    constante         ir al estado 57
    constante_logica  ir al estado 58
    constante_entera  ir al estado 59
    identificador     ir al estado 60


Estado 51

   46 exp: TOK_MENOS . exp

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 50
    TOK_MENOS                desplazar e ir al estado 51
    TOK_NOT                  desplazar e ir al estado 52
    TOK_IDENTIFICADOR        desplazar e ir al estado 19
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 44
    TOK_TRUE                 desplazar e ir al estado 53
    TOK_FALSE                desplazar e ir al estado 54

    elemento_vector   ir al estado 55
    exp               ir al estado 75
    constante         ir al estado 57
    constante_logica  ir al estado 58
    constante_entera  ir al estado 59
    identificador     ir al estado 60


Estado 52

   49 exp: TOK_NOT . exp

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 50
    TOK_MENOS                desplazar e ir al estado 51
    TOK_NOT                  desplazar e ir al estado 52
    TOK_IDENTIFICADOR        desplazar e ir al estado 19
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 44
    TOK_TRUE                 desplazar e ir al estado 53
    TOK_FALSE                desplazar e ir al estado 54

    elemento_vector   ir al estado 55
    exp               ir al estado 76
    constante         ir al estado 57
    constante_logica  ir al estado 58
    constante_entera  ir al estado 59
    identificador     ir al estado 60


Estado 53

   68 constante_logica: TOK_TRUE .

    $default  reduce usando la regla 68 (constante_logica)


Estado 54

   69 constante_logica: TOK_FALSE .

    $default  reduce usando la regla 69 (constante_logica)


Estado 55

   54 exp: elemento_vector .

    $default  reduce usando la regla 54 (exp)


Estado 56

   40 escritura: TOK_PRINTF exp .
   42 exp: exp . TOK_MAS exp
   43    | exp . TOK_MENOS exp
   44    | exp . TOK_DIVISION exp
   45    | exp . TOK_ASTERISCO exp
   47    | exp . TOK_AND exp
   48    | exp . TOK_OR exp

    TOK_MAS        desplazar e ir al estado 77
    TOK_MENOS      desplazar e ir al estado 78
    TOK_DIVISION   desplazar e ir al estado 79
    TOK_ASTERISCO  desplazar e ir al estado 80
    TOK_AND        desplazar e ir al estado 81
    TOK_OR         desplazar e ir al estado 82

    $default  reduce usando la regla 40 (escritura)


Estado 57

   51 exp: constante .

    $default  reduce usando la regla 51 (exp)


Estado 58

   66 constante: constante_logica .

    $default  reduce usando la regla 66 (constante)


Estado 59

   67 constante: constante_entera .

    $default  reduce usando la regla 67 (constante)


Estado 60

   35 elemento_vector: identificador . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO
   50 exp: identificador .
   55    | identificador . TOK_PARENTESISIZQUIERDO lista_expresiones TOK_PARENTESISDERECHO

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 83
    TOK_CORCHETEIZQUIERDO    desplazar e ir al estado 66

    $default  reduce usando la regla 50 (exp)


Estado 61

   41 retorno_funcion: TOK_RETURN exp .
   42 exp: exp . TOK_MAS exp
   43    | exp . TOK_MENOS exp
   44    | exp . TOK_DIVISION exp
   45    | exp . TOK_ASTERISCO exp
   47    | exp . TOK_AND exp
   48    | exp . TOK_OR exp

    TOK_MAS        desplazar e ir al estado 77
    TOK_MENOS      desplazar e ir al estado 78
    TOK_DIVISION   desplazar e ir al estado 79
    TOK_ASTERISCO  desplazar e ir al estado 80
    TOK_AND        desplazar e ir al estado 81
    TOK_OR         desplazar e ir al estado 82

    $default  reduce usando la regla 41 (retorno_funcion)


Estado 62

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones funciones sentencias TOK_LLAVEDERECHA .

    $default  reduce usando la regla 1 (programa)


Estado 63

   24 sentencias: sentencia sentencias .

    $default  reduce usando la regla 24 (sentencias)


Estado 64

   25 sentencia: sentencia_simple TOK_PUNTOYCOMA .

    $default  reduce usando la regla 25 (sentencia)


Estado 65

   34 asignacion: elemento_vector TOK_ASIGNACION . exp

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 50
    TOK_MENOS                desplazar e ir al estado 51
    TOK_NOT                  desplazar e ir al estado 52
    TOK_IDENTIFICADOR        desplazar e ir al estado 19
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 44
    TOK_TRUE                 desplazar e ir al estado 53
    TOK_FALSE                desplazar e ir al estado 54
